--- a/bbt.bib
+++ b/bbt.bib
@@ -1582,7 +1582,7 @@
 
 @inproceedings{Svore2004,
   title     = {Toward a Software Architecture for Quantum Computing Design Tools},
-  author    = {Svore, Krysta M. and Cross, Andrew W. and Aho, Alfred V. and Chuang, Isaac and Markov, Igor L.},
+  author    = {Svore, Krysta M. and Cross, Andrew W. and Aho, Alfred V. and Chuang, Isaac L. and Markov, Igor L.},
   year      = {2004},
   month     = jul,
   booktitle = {Proceedings of the 2nd International Workshop on Quantum Programming Languages (QPL), Turku, Finland, July 12--13, 2004},
@@ -1594,7 +1594,7 @@
 
 @article{Svore2006,
   title    = {A Layered Software Architecture for Quantum Computing Design Tools},
-  author   = {Svore, Krysta M. and Aho, Alfred V. and Cross, Andrew W. and Chuang, Isaac and Markov, Igor L.},
+  author   = {Svore, Krysta M. and Aho, Alfred V. and Cross, Andrew W. and Chuang, Isaac L. and Markov, Igor L.},
   year     = {2006},
   month    = jan,
   journal  = {Computer},
