--- a/bbt.bib
+++ b/bbt.bib
@@ -1181,7 +1181,7 @@
 }
 
 @phdthesis{Paykin2018,
-  title    = {Linear/non-Linear Types For Embedded Domain-Specific Languages},
+  title    = {{Linear/Non-Linear Types for Embedded Domain-Specific Languages}},
   author   = {Paykin, Jennifer},
   year     = {2018},
   month    = aug,
