--- a/bbt.bib
+++ b/bbt.bib
@@ -1190,6 +1190,22 @@
   abstract      = {qPCF is a paradigmatic quantum programming language that extends PCF with quantum circuits and a quantum co-processor. Quantum circuits are treated as classical data that can be duplicated and manipulated in flexible ways by means of a dependent type system. The co-processor is essentially a standard QRAM device, albeit we avoid to store permanently quantum states in between two co-processor's calls. Despite its quantum features, qPCF retains the classic programming approach of PCF. We introduce qPCF syntax, typing rules, and its operational semantics. We prove fundamental syntactic properties of the system. Moreover, we provide some higher-order examples of circuit encoding.}
 }
 
+@inproceedings{Paradis2021,
+  title     = {Unqomp: Synthesizing Uncomputation in Quantum Circuits},
+  author    = {Paradis, Anouk and Bichsel, Benjamin and Steffen, Samuel and Vechev, Martin},
+  year      = {2021},
+  month     = jun,
+  booktitle = {Proceedings of the 42nd ACM SIGPLAN International Conference on Programming Language Design and Implementation},
+  publisher = {{Association for Computing Machinery}},
+  address   = {New York, NY, USA},
+  series    = {{{PLDI}} '21},
+  pages     = {222--236},
+  numpages  = {15},
+  doi       = {10.1145/3453483.3454040},
+  abstract  = {A key challenge when writing quantum programs is the need for uncomputation: temporary values produced during the computation must be reset to zero before they can be safely discarded. Unfortunately, most existing quantum languages require tedious manual uncomputation, often leading to inefficient and error-prone programs. We present Unqomp, the first procedure to automatically synthesize uncomputation in a given quantum circuit. Unqomp can be readily integrated into popular quantum languages, allowing the programmer to allocate and use temporary values analogously to classical computation, knowing they will be uncomputed by Unqomp. Our evaluation shows that programs leveraging Unqomp are not only shorter (-19% on average), but also generate more efficient circuits (-71% gates and -19% qubits on average).},
+  keywords  = {quantum Circuits, uncomputation, synthesis}
+}
+
 @inproceedings{Paykin2017,
   title     = {{{QWIRE}}: A Core Language for Quantum Circuits},
   author    = {Paykin, Jennifer and Rand, Robert and Zdancewic, Steve},
