--- a/bbt.bib
+++ b/bbt.bib
@@ -1086,7 +1086,7 @@
   keywords      = {proto-quipper, quantum programming languages, linear logic, hybrid, higher-order abstract syntax, coq}
 }
 
-@misc{Mosca2019,
+@article{Mosca2019,
   title     = {{Quantum Programming Languages (Dagstuhl Seminar 18381)}},
   author    = {Mosca, Michele and Roetteler, Martin and Selinger, Peter},
   year      = {2019},
