--- a/bbt.bib
+++ b/bbt.bib
@@ -189,7 +189,7 @@
 
 @article{Bettelli2003,
   title         = {Toward an Architecture for Quantum Programming},
-  author        = {Bettelli, S. and Calarco, T. and Serafini, L.},
+  author        = {Bettelli, Stefano and Calarco, Tommaso and Serafini, Luciano},
   year          = {2003},
   month         = aug,
   journal       = {European Physical Journal D: Atomic, Molecular, Optical and Plasma Physics},
@@ -251,7 +251,7 @@
 
 @article{Briegel2009,
   title         = {Measurement-Based Quantum Computation},
-  author        = {Briegel, H. J. and Browne, D. E. and D{\"u}r, W. and Raussendorf, R. and {Van den Nest}, M.},
+  author        = {Briegel, Hans J. and Browne, Dan E. and D{\"u}r, Wolfgang and Rau{\ss}endorf, Robert and {Van den Nest}, Maarten},
   year          = {2009},
   month         = jan,
   journal       = {Nature Physics},
@@ -312,6 +312,20 @@
   eprint        = {2109.06493},
   abstract      = {While recent progress in quantum hardware open the door for significant speedup in certain key areas (cryptography, biology, chemistry, optimization, machine learning, etc), quantum algorithms are still hard to implement right, and the validation of such quantum programs is achallenge. Moreover, importing the testing and debugging practices at use in classical programming is extremely difficult in the quantum case, due to the destructive aspect of quantum measurement. As an alternative strategy, formal methods are prone to play a decisive role in the emerging field of quantum software. Recent works initiate solutions for problems occurring at every stage of the development process: high-level program design, implementation, compilation, etc. We review the induced challenges for an efficient use of formal methods in quantum computing and the current most promising research directions.},
   note          = {To appear as Chapter ``Formal methods for Quantum Algorithms'' in ``Handbook of Formal Analysis and Verification in Cryptography'', CRC}
+}
+
+@article{Chong2017,
+  title    = {Programming languages and compiler design for realistic quantum hardware},
+  author   = {Chong, Frederic T. and Franklin, Diana and Martonosi, Margaret},
+  year     = {2017},
+  month    = sep,
+  journal  = {Nature},
+  volume   = {549},
+  number   = {7671},
+  pages    = {180--187},
+  doi      = {10.1038/nature23459},
+  abstract = {Quantum computing sits at an important inflection point. For years, high-level algorithms for quantum computers have shown considerable promise, and recent advances in quantum device fabrication offer hope of utility. A gap still exists, however, between the hardware size and reliability requirements of quantum computing algorithms and the physical machines foreseen within the next ten years. To bridge this gap, quantum computers require appropriate software to translate and optimize applications (toolflows) and abstraction layers. Given the stringent resource constraints in quantum computing, information passed between layers of software and implementations will differ markedly from in classical computing. Quantum toolflows must expose more physical details between layers, so the challenge is to find abstractions that expose key details while hiding enough complexity.},
+  note     = {Review Article}
 }
 
 @misc{CirqDevelopers2018,
@@ -518,6 +532,24 @@
   eprint        = {2005.08396},
   abstract      = {We introduce dependently typed Proto-Quipper, or Proto-Quipper-D for short, an experimental quantum circuit programming language with linear dependent types. We give several examples to illustrate how linear dependent types can help in the construction of correct quantum circuits. Specifically, we show how dependent types enable programming families of circuits, and how dependent types solve the problem of type-safe uncomputation of garbage qubits. We also discuss other language features along the way.},
   keywords      = {quantum programming languages, linear dependent types, proto-quipper-d}
+}
+
+@article{Fu2021,
+  title     = {Quingo: A Programming Framework for Heterogeneous Quantum-Classical Computing with NISQ Features},
+  author    = {Fu, Xiang and Yu, Jintao and Su, Xing and Jiang, Hanru and Wu, Hua and Cheng, Fucheng and Deng, Xi and Zhang, Jinrong and Jin, Lei and Yang, Yihang and Xu, Le and Hu, Chunchao and Huang, Anqi and Huang, Guangyao and Qiang, Xiaogang and Deng, Mingtang and Xu, Ping and Xu, Weixia and Liu, Wanwei and Zhang, Yu and Deng, Yuxin and Wu, Junjie and Feng, Yuan},
+  year      = {2021},
+  month     = dec,
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  journal   = {ACM Transactions on Quantum Computing},
+  volume    = {2},
+  number    = {4},
+  eid       = {19},
+  pages     = {19},
+  numpages  = {37},
+  doi       = {10.1145/3483528},
+  abstract  = {The increasing control complexity of Noisy Intermediate-Scale Quantum (NISQ) systems underlines the necessity of integrating quantum hardware with quantum software. While mapping heterogeneous quantum-classical computing (HQCC) algorithms to NISQ hardware for execution, we observed a few dissatisfactions in quantum programming languages (QPLs), including difficult mapping to hardware, limited expressiveness, and counter-intuitive code. In addition, noisy qubits require repeatedly performed quantum experiments, which explicitly operate low-level configurations, such as pulses and timing of operations. This requirement is beyond the scope or capability of most existing QPLs.We summarize three execution models to depict the quantum-classical interaction of existing QPLs. Based on the refined HQCC model, we propose the Quingo framework to integrate and manage quantum-classical software and hardware to provide the programmability over HQCC applications and map them to NISQ hardware. We propose a six-phase quantum program life-cycle model matching the refined HQCC model, which is implemented by a runtime system. We also propose the Quingo programming language, an external domain-specific language highlighting timer-based timing control and opaque operation definition, which can be used to describe quantum experiments. We believe the Quingo framework could contribute to the clarification of key techniques in the design of future HQCC systems.},
+  keywords  = {nisq, quantum compilation, timing control, quantum programming framework, quantum programming language}
 }
 
 @inproceedings{Gay2005,
@@ -823,6 +855,25 @@
   keywords  = {category theory, quantum theory, monoidal category}
 }
 
+@article{Ittah2022,
+  title     = {QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization},
+  author    = {Ittah, David and H\"{a}ner, Thomas and Kliuchnikov, Vadym and Hoefler, Torsten},
+  year      = {2022},
+  month     = jun,
+  journal   = {ACM Transactions on Quantum Computing},
+  publisher = {{Association for Computing Machinery}},
+  address   = {New York, NY, USA},
+  volume    = {3},
+  number    = {2},
+  eid       = {},
+  pages     = {},
+  numpages  = {29},
+  doi       = {10.1145/3491247},
+  abstract  = {We propose an IR for quantum computing that directly exposes quantum and classical data dependencies for the purpose of optimization. The Quantum Intermediate Representation for Optimization (QIRO) consists of two dialects, one input dialect and one that is specifically tailored to enable quantum-classical co-optimization. While the first employs a perhaps more intuitive memory-semantics (quantum operations act on qubits via side-effects), the latter uses value-semantics (operations consume and produce states) to integrate quantum dataflow in the IR's Static Single Assignment (SSA) graph. Crucially, this allows for a host of optimizations that leverage dataflow analysis. We discuss how to map existing quantum programming languages to the input dialect and how to lower the resulting IR to the optimization dialect. We present a prototype implementation based on MLIR that includes several quantum-specific optimization passes. Our benchmarks show that significant improvements in resource requirements are possible even through static optimization. In contrast to circuit optimization at run time, this is achieved while incurring only a small constant overhead in compilation time, making this a compelling approach for quantum program optimization at application scale.},
+  keywords  = {intermediate representation, dataflow optimization, quantum compilation, mlir},
+  note      = {Just Accepted}
+}
+
 @techreport{JavadiAbhari2012,
   title       = {Scaffold: {{Quantum}} Programming Language},
   author      = {{Javadi-Abhari}, Ali and Faruque, Arvin and Dousti, Mohammad Javad and Svec, Lukas and Catu, Oana and Chakrabarti, Amlan and Chiang, Chen-Fu and Vanderwilt, Seth and Black, John and Chong, Frederic T. and Martonosi, Margaret and Suchara, Martin and Brown, Ken and Pedram, Massoud and Brun, Todd},
@@ -895,6 +946,24 @@
   number      = {LA-UR-96-2724},
   doi         = {10.2172/366453},
   abstract    = {A few conventions for thinking about and writing quantum pseudocode are proposed. The conventions can be used for presenting any quantum algorithm down to the lowest level and are consistent with a quantum random access machine (QRAM) model for quantum computing. In principle a formal version of quantum pseudocode could be used in a future extension of a conventional language.}
+}
+
+@article{Kong2021,
+  author    = {Kong, Martin},
+  title     = {On the Impact of Affine Loop Transformations in Qubit Allocation},
+  year      = {2021},
+  month     = sep,
+  journal   = {ACM Transactions on Quantum Computing},
+  publisher = {{Association for Computing Machinery}},
+  address   = {New York, NY, USA},
+  volume    = {2},
+  number    = {3},
+  eid       = {9},
+  pages     = {9},
+  numpages  = {40},
+  doi       = {10.1145/3465409},
+  abstract  = {Most quantum compiler transformations and qubit allocation techniques to date are either peep-hole focused or rely on sliding windows that depend on a number of external parameters including the topology of the quantum processor. Thus, global optimization criteria are still lacking. In this article, we explore the synergies and impact of affine loop transformations in the context of qubit allocation and mapping. With this goal in mind, we designed and implemented AXL, a domain specific language and source-to-source compiler for quantum circuits that can be directly described with affine relations. We conduct an extensive evaluation spanning circuits from the recently introduced QUEKO benchmark suite, eight quantum circuits taken from the literature, three distinct coupling graphs, four affine transformations (including the Pluto dependence distance minimization and Feautrier's minimum latency algorithms), four qubit allocators, and two back-end quantum compilers. Our results demonstrate that affine transformations using global optimization criteria can cooperate effectively in several scenarios with quantum qubit mapping algorithms to reduce the circuit depth, size and allocation time.},
+  keywords  = {qubit allocation, polyhedral model, quantum computing, affine transformations}
 }
 
 @inproceedings{Kornell2021,
@@ -1084,6 +1153,26 @@
   eprint        = {1812.03624},
   abstract      = {We develop a linear logical framework within the Hybrid system and use it to reason about the type system of a quantum lambda calculus. In particular, we consider a practical version of the calculus called Proto-Quipper, which contains the core of Quipper. Quipper is a quantum programming language under active development and recently has gained much popularity among the quantum computing communities. Hybrid is a system that is designed to support the use of higher-order abstract syntax for representing and reasoning about formal systems implemented in the Coq Proof Assistant. In this work, we extend the system with a linear specification logic (SL) in order to reason about the linear type system of Quipper. To this end, we formalize the semantics of Proto-Quipper by encoding the typing and evaluation rules in the SL, and prove type soundness.},
   keywords      = {proto-quipper, quantum programming languages, linear logic, hybrid, higher-order abstract syntax, coq}
+}
+
+@article{Mccaskey2021,
+  title         = {Extending C++ for Heterogeneous Quantum-Classical Computing},
+  author        = {Mccaskey, Alexander and Nguyen, Thien and Santana, Anthony and Claudino, Daniel and Kharazi, Tyler and Finkel, Hal},
+  year          = {2021},
+  month         = jun,
+  journal       = {ACM Transactions on Quantum Computing},
+  publisher     = {{Association for Computing Machinery}},
+  address       = {New York, NY, USA},
+  volume        = {2},
+  number        = {2},
+  eid           = {6},
+  pages         = {6},
+  numpages      = {36},
+  doi           = {10.1145/3462670},
+  archiveprefix = {arXiv},
+  eprint        = {2010.03935},
+  abstract      = {We present qcor—a language extension to C++ and compiler implementation that enables heterogeneous quantum-classical programming, compilation, and execution in a single-source context. Our work provides a first-of-its-kind C++ compiler enabling high-level quantum kernel (function) expression in a quantum-language agnostic manner, as well as a hardware-agnostic, retargetable compiler workflow targeting a number of physical and virtual quantum computing backends. qcor leverages novel Clang plugin interfaces and builds upon the XACC system-level quantum programming framework to provide a state-of-the-art integration mechanism for quantum-classical compilation that leverages the best from the community at-large. qcor translates quantum kernels ultimately to the XACC intermediate representation, and provides user-extensible hooks for quantum compilation routines like circuit optimization, analysis, and placement. This work details the overall architecture and compiler workflow for qcor, and provides a number of illuminating programming examples demonstrating its utility for near-term variational tasks, quantum algorithm expression, and feed-forward error correction schemes.},
+  keywords      = {domain specific languages, quantum programming, quantum computing, compilers}
 }
 
 @article{Mosca2019,
