--- a/bbt.bib
+++ b/bbt.bib
@@ -2139,7 +2139,7 @@
 }
 
 @inproceedings{Zhou2021,
-  title         = {A Quantum Interpretation of Bunched Logic & Quantum Separation Logic},
+  title         = {A Quantum Interpretation of Bunched Logic \& Quantum Separation Logic},
   author        = {Zhou, Li and Barthe, Gilles and Hsu, Justin and Ying, Mingsheng and Yu, Nengkun},
   year          = {2021},
   month         = jul,
