Update Quingo author name

--- a/bbt.bib
+++ b/bbt.bib
@@ -1358,7 +1358,7 @@
 
 @article{QuingoTeam2021,
   title     = {Quingo: A Programming Framework for Heterogeneous Quantum-Classical Computing with NISQ Features},
-  author    = {{Quingo Development Team}, The},
+  author    = {{Quingo Development Team}},
   year      = {2021},
   month     = dec,
   publisher = {Association for Computing Machinery},
