--- a/bbt.bib
+++ b/bbt.bib
@@ -445,6 +445,7 @@
   number   = {2},
   eid      = {8},
   pages    = {8},
+  numpages = {45},
   doi      = {10.1145/1219092.1219096},
   url      = {https://www.cs.mcgill.ca/~prakash/Pubs/jacm.pdf},
   abstract = {Measurement-based quantum computation has emerged from the physics community as a new approach to quantum computation where the notion of measurement is the main driving force of computation. This is in contrast with the more traditional circuit model that is based on unitary operations. Among measurement-based quantum computation methods, the recently introduced one-way quantum computer [Raussendorf and Briegel 2001] stands out as fundamental. We develop a rigorous mathematical model underlying the one-way quantum computer and present a concrete syntax and operational semantics for programs, which we call patterns, and an algebra of these patterns derived from a denotational semantics. More importantly, we present a calculus for reasoning locally and compositionally about these patterns. We present a rewrite theory and prove a general standardization theorem which allows all patterns to be put in a semantically equivalent standard form. Standardization has far-reaching consequences: a new physical architecture based on performing all the entanglement in the beginning, parallelization by exposing the dependency structure of measurements and expressiveness theorems. Furthermore we formalize several other measurement-based models, for example, Teleportation, Phase and Pauli models and present compositional embeddings of them into and from the one-way model. This allows us to transfer all the theory we develop for the one-way model to these models. This shows that the framework we have developed has a general impact on measurement-based computation and is not just particular to the one-way quantum computer.},
@@ -1814,7 +1815,8 @@
   address       = {{New York, NY, USA}},
   series        = {{{RWDSL}} '18},
   eid           = {7},
-  pages         = {7:1--7:10},
+  pages         = {7},
+  numpages      = {10},
   doi           = {10.1145/3183895.3183901},
   archiveprefix = {arXiv},
   eprint        = {1803.00652},
@@ -1977,7 +1979,8 @@
   volume   = {33},
   number   = {6},
   eid      = {19},
-  pages    = {19:1--19:49},
+  pages    = {19},
+  numpages = {49},
   doi      = {10.1145/2049706.2049708},
   abstract = {Floyd--Hoare logic is a foundation of axiomatic semantics of classical programs, and it provides effective proof techniques for reasoning about correctness of classical programs. To offer similar techniques for quantum program verification and to build a logical foundation of programming methodology for quantum computers, we develop a full-fledged Floyd--Hoare logic for both partial and total correctness of quantum programs. It is proved that this logic is (relatively) complete by exploiting the power of weakest preconditions and weakest liberal preconditions for quantum programs.},
   keywords = {quantum computation, programming languages, axiomatic semantics, floyd--hoare logic, completeness, hoare logic},
