Add booktitle in @book entries

--- a/bbt.bib
+++ b/bbt.bib
@@ -364,6 +364,7 @@
   author    = {Coecke, Bob and Kissinger, Aleks},
   year      = {2017},
   month     = mar,
+  booktitle = {Picturing Quantum Processes: A First Course in Quantum Theory and Diagrammatic Reasoning},
   publisher = {{Cambridge University Press}},
   address   = {Cambridge},
   doi       = {10.1017/9781316219317},
@@ -593,6 +594,7 @@
   title     = {Semantic Techniques in Quantum Computation},
   year      = {2009},
   month     = nov,
+  booktitle = {Semantic Techniques in Quantum Computation},
   editor    = {Gay, Simon J. and Mackie, Ian},
   publisher = {{Cambridge University Press}},
   address   = {Cambridge},
@@ -713,6 +715,7 @@
   author    = {Heunen, Chris and Vicary, Jamie},
   year      = {2019},
   month     = nov,
+  booktitle = {Categories for Quantum Theory: An Introduction},
   publisher = {{Oxford University Press}},
   address   = {Oxford},
   doi       = {10.1093/oso/9780198739623.001.0001},
@@ -1187,6 +1190,7 @@
   author    = {Nielsen, Michael A. and Chuang, Isaac L.},
   year      = {2010},
   month     = dec,
+  booktitle = {Quantum Computation and Quantum Information: 10th Anniversary Edition},
   publisher = {{Cambridge University Press}},
   address   = {{Cambridge}},
   doi       = {10.1017/CBO9780511976667},
@@ -2031,6 +2035,7 @@
   author    = {Ying, Mingsheng},
   year      = {2016},
   month     = mar,
+  booktitle = {Foundations of Quantum Programming},
   publisher = {{Morgan Kaufmann}},
   address   = {{Amsterdam}},
   doi       = {10.1016/C2014-0-02660-3},
@@ -2070,6 +2075,7 @@
   author    = {Ying, Mingsheng and Feng, Yuan},
   year      = {2021},
   month     = jan,
+  booktitle = {Model Checking Quantum Systems: Principles and Algorithms},
   publisher = {{Cambridge University Press}},
   address   = {Cambridge},
   doi       = {10.1017/9781108613323},
